# zh-ebn-report-skill

./: .gitignore  LICENSE  README.md
zh-ebn-report/: .env.example  SKILL.md  pyproject.toml
zh-ebn-report/agents/: openai.yaml
zh-ebn-report/examples/example-case-delirium/: README.md  case-deidentified.yaml
zh-ebn-report/examples/example-reading-pressure-ulcer/: README.md
zh-ebn-report/references/: ai-disclosure.md  appraisal-tools.md  case-report-template.md  gordon-11-patterns.md  phrasing-bank.md  pico-and-search.md  reading-report-template.md  subagent-roles.md  topic-selection.md
zh-ebn-report/scripts/: retro_validate.py  smoke_test_codex_backend.py
zh-ebn-report/src/zh_ebn_report/: __init__.py  cli.py  cli_tools.py  config.py  models.py  state.py
zh-ebn-report/src/zh_ebn_report/clients/: anthropic.py  claude_code_cli.py  codex_cli.py  crossref.py  embase.py  llm.py  manual_import.py  openalex.py  pubmed.py  scopus.py  system.py
zh-ebn-report/src/zh_ebn_report/pipeline/: agents.py  apa_guard.py  checkpoints.py  compliance.py  evidence_guard.py  keyword_tuner.py  orchestrator.py  prompts.py  searcher.py
zh-ebn-report/src/zh_ebn_report/prompts/: _base.md  apa_formatter.md  apply_auditor.md  case_narrator.md  casp_cohort.md  casp_qualitative.md  casp_rct.md  casp_sr.md  keyword_tuner.md  (+17 more)
zh-ebn-report/tests/: test_airiti_import.py  test_apa_guard.py  test_audited_llm.py  test_bibliography.py  test_claude_code_cli.py  test_codex_cli.py  test_dedup.py  test_deid.py  test_evidence_guard.py  test_evidence_guard_smoke.py  test_gordon_compliance.py  test_keyword_tuner.py  test_models.py
(+8 files in other folders)
